# FrameworksPerformanceComparison

./: .editorconfig  FrameworksPerformanceComparison.bat  FrameworksPerformanceComparison.dsoptions  FrameworksPerformanceComparison.sln  LICENSE
CSharp/CleanArc/App/TFX.App.INF/: TFX.App.INF.Module.cs  TFX.App.INF.csproj  TFX.App.INF.dsmdl
CSharp/CleanArc/App/TFX.App.INF/Servisses/: RequestTest.Controller.cs  RequestTest.Service.cs  RequestTest.dssvc
CSharp/CleanArc/App/TFX.App.MDL/: TFX.App.MDL.Module.cs  TFX.App.MDL.csproj  TFX.App.MDL.dsmdl
CSharp/CleanArc/App/TFX.App.MDL/Servisses/: RequestTest.DataSet.cs
CSharp/CleanArc/App/TFX.App.RLE/: TFX.App.RLE.Module.cs  TFX.App.RLE.csproj  TFX.App.RLE.dsmdl
CSharp/CleanArc/App/TFX.App.RLE/Servisses/: RequestTest.Rule.cs
CSharp/CleanArc/App/TFX.App.Test/: TFX.App.INF.Test.csproj  TFX.App.INF.Test.dsmdl  TFX.App.Test.dsmdl  TestSetup.cs
CSharp/CleanArc/App/TFX.App.Test/Servisses/: RequestTest.Test.cs
CSharp/CleanArc/Launcher/: Launcher.csproj  Program.cs
CSharp/CleanArc/TFX.Core/: TFX.Core.csproj
CSharp/CleanArc/TFX.Core.Test.Setup/: TFX.Core.Test.Setup.csproj
CSharp/CleanArc/TFX.Core.UI/wwwroot/js/: TFX.Core.d.ts  TFX.Core.js  TFX.Core.js.map
CSharp/Common/: XMetrics.cs
CSharp/TestClient/: Program.cs  TestClient.csproj  XPayloadGenerator.cs
CSharp/UsingMiddleware/: Program.cs  UsingMiddleware.csproj  XMiddleware.cs  XPayload.cs
CSharp/UsingMiddleware/Properties/: launchSettings.json
Rust/TestClient/: Cargo.toml
Rust/TestClient/src/: XMetrics.rs  XPayload.rs  XPayloadGenerator.rs  main.rs
(+2 files in other folders)
